--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ flutter:
   assets:
      - lib/assets/login.png
      - lib/assets/logo.png
+     - lib/assets/background.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
