--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,18 +28,26 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
-    sdk: flutter
+    flutter:
+      sdk: flutter
+    firebase_core: ^2.32.0
+    firebase_database: ^10.5.7
+    firebase_auth: ^4.20.0
+    cloud_firestore: ^4.17.5
+    fluttertoast: ^8.2.5
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
+cupertino_icons: ^1.0.6
+get: ^4.6.6
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
