--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,17 +30,18 @@ environment:
 dependencies:
     flutter:
       sdk: flutter
+    get: ^4.6.6
     firebase_core: ^2.32.0
     firebase_database: ^10.5.7
     firebase_auth: ^4.20.0
     cloud_firestore: ^4.17.5
     fluttertoast: ^8.2.5
-
+    flutter_svg : ^2.0.10+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 cupertino_icons: ^1.0.6
-get: ^4.6.6
+
 
 
 dev_dependencies:
