--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
     flutter:
       sdk: flutter
     get: ^4.6.6
+    hive: ^2.2.3
+    hive_flutter: ^1.1.0
     firebase_core: ^2.32.0
     firebase_database: ^10.5.7
     firebase_auth: ^4.20.0
@@ -41,12 +43,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 cupertino_icons: ^1.0.6
+flutter_slidable: ^1.2.0
 
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1
+
 
 
 
