--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     flutter:
       sdk: flutter
     get: ^4.6.6
+    flutter_slidable: ^3.1.0
     hive: ^2.2.3
     hive_flutter: ^1.1.0
     firebase_core: ^2.32.0
@@ -51,6 +52,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   hive_generator: ^2.0.1
+  build_runner: ^2.4.9
 
 
 
